--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@json-editor/json-editor": "^2.8.0",
     "@popperjs/core": "^2.11.5",
+    "ace-builds": "^1.11.2",
     "bootstrap": "^5.1.3",
     "js-yaml": "^4.1.0",
     "json-loader": "^0.5.7",
